# kinect-pointCloud

./: CMakeLists.txt  LICENSE  README.md  kinect_test.cpp
Calibration/: CMakeLists.txt  kinect_calibration.cpp
Calibration/include/: depth_controller.hpp  kinect_controller.hpp  rgb_controller.hpp
Calibration/src/: depth_controller.cpp  kinect_calibration.cpp  kinect_controller.cpp  rgb_controller.cpp
DepthMap/: CMakeLists.txt  depth_map.cpp
PointCloud/: CMakeLists.txt  view_point_cloud.cpp
